tests/ui/error/unexpected_name.stderr
error: Unknown attribute
 --> tests/ui/error/unexpected_name.rs:3:15
  |
3 |     #[builder(eac = "arg")]
  |               ^^^^^^^^^^^
